fix: update from MD tables to Tables component (#9)
Co-authored-by: Chai Landau <chai.landau@gmail.com>

--- a/docs/customize/authentication/oauth.mdx
+++ b/docs/customize/authentication/oauth.mdx
@@ -16,12 +16,30 @@ the standard OpenAPI specification.
 
 This document covers the following types of OAuth 2.0 flows:
 
-| Oauth 2.0 type               | Description                                                                                 | 
-| ---------------------------- | --------------------------------------------------------------------------------------------|
-| `client credentials`         | [Docs](#client-credentials-flow)         |   
-| `authorization flow`         | [Docs](#authorization-code-flow)         | 
-| `resource owner password credentials flow`      | [Docs](#resource-owner-password-credentials-flow)                   |
-| `custom token refresh flow`  | [Docs](#custom-refresh-token-flow)       |
+<Table 
+  data={[
+    { 
+      type: "`client credentials`", 
+      description: "[Docs](#client-credentials-flow)" 
+    },
+    { 
+      type: "`authorization flow`", 
+      description: "[Docs](#authorization-code-flow)" 
+    },
+    { 
+      type: "`resource owner password credentials flow`", 
+      description: "[Docs](#resource-owner-password-credentials-flow)" 
+    },
+    { 
+      type: "`custom token refresh flow`", 
+      description: "[Docs](#custom-refresh-token-flow)" 
+    }
+  ]}
+  columns={[
+    { key: "type", header: "OAuth 2.0 type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 Other custom flows can be implemented using a combination of [hooks](/docs/customize/code/sdk-hooks) and [custom security schemes](/docs/customize/authentication/custom-security-schemes).
 
