--- a/docs/customize/code/sdk-hooks.mdx
+++ b/docs/customize/code/sdk-hooks.mdx
@@ -24,14 +24,20 @@ Hooks can be applied to the following lifecycle events:
 
 Hooks are supported in SDKs generated with the latest Speakeasy CLI. Each supported language includes a hooks directory in the generated code:
 
-| Language    | Directory Path                       |
-| ----------- | ------------------------------------ |
-| Go          | `internal/hooks`                     |
-| Python      | `src/{sdk_name}/_hooks`              |
-| TypeScript  | `src/hooks`                          |
-| Java        | `src/main/java/{package_path}/hooks` |
-| C#          | `{root_path}/Hooks`                  |
-| Ruby        | `lib/{sdk_name}/sdk_hooks`           |
+<Table
+  data={[
+    { language: "Go", directory: "`internal/hooks`" },
+    { language: "Python", directory: "`src/{sdk_name}/_hooks`" },
+    { language: "TypeScript", directory: "`src/hooks`" },
+    { language: "Java", directory: "`src/main/java/{package_path}/hooks`" },
+    { language: "C#", directory: "`{root_path}/Hooks`" },
+    { language: "Ruby", directory: "`lib/{sdk_name}/sdk_hooks`" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "directory", header: "Directory Path" }
+  ]}
+/>
 
 ### Steps to Add a Hook
 
