--- a/openapi-hub/overlays.mdx
+++ b/openapi-hub/overlays.mdx
@@ -97,9 +97,16 @@ A human-readable title describing the purpose of the Overlay document.
 
 ## !!steps `version`
 
-| Field Name | Type   | Required |
-| ---------- | ------ | -------- |
-| `version`  | String | ✅       |
+<Table 
+  data={[
+    { fieldName: "version", type: "String", required: "✅" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
 
 A version identifier indicating the version of the Overlay document.
 
@@ -225,13 +232,21 @@ Provides metadata about the Overlay document.
 
 Each Action Object represents at least one change to be made to the original OpenAPI document at the location specified by the `target` field.
 
-| Field Name    | Type    | Required | Description                                                                                                                                                                                                       |
-| ------------- | ------- | -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `target`      | String  | ✅       | A [JSONPath](https://datatracker.ietf.org/wg/jsonpath/documents/) expression that specifies the location in the original OpenAPI document where the change should be made. See [Action Targets](#action-targets). |
-| `description` | String  |          | A description of the action. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description.                                                                                    |
-| `update`      | Any     |          | An object containing the properties and values to be merged with the objects referenced by the `target`. This field has no effect if the `remove` field is `true`.                                                |
-| `remove`      | Boolean |          | If `true`, the objects referenced by the `target` are removed from the original document. If `false` or not provided, the objects are not removed. This field takes precedence over the `update` field.           |
-| `x-*`         | Any     |          | Any number of extension fields can be added to the Action Object that can be used by tooling and vendors.                                                                                                         |
+<Table 
+  data={[
+    { fieldName: "`target`", type: "String", required: "✅", description: "A [JSONPath](https://datatracker.ietf.org/wg/jsonpath/documents/) expression that specifies the location in the original OpenAPI document where the change should be made. See [Action Targets](#action-targets)." },
+    { fieldName: "`description`", type: "String", required: "", description: "A description of the action. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description." },
+    { fieldName: "`update`", type: "Any", required: "", description: "An object containing the properties and values to be merged with the objects referenced by the `target`. This field has no effect if the `remove` field is `true`." },
+    { fieldName: "`remove`", type: "Boolean", required: "", description: "If `true`, the objects referenced by the `target` are removed from the original document. If `false` or not provided, the objects are not removed. This field takes precedence over the `update` field." },
+    { fieldName: "`x-*`", type: "Any", required: "", description: "Any number of extension fields can be added to the Action Object that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Action Targets in OpenAPI
 
@@ -243,27 +258,39 @@ JSONPath is [implemented differently](https://cburgmer.github.io/json-path-compa
 
 Here are some examples of JSONPath expressions relevant to OpenAPI documents:
 
-| JSONPath Expression                                                                        | Description                                                                 |
-| ------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------- |
-| `$.info.title`                                                                             | Selects the `title` field of the `info` object.                             |
-| `$.servers[0].url`                                                                         | Selects the `url` field of the first server in the `servers` array.         |
-| `$.paths['/drinks'].get.parameters`                                                        | Selects the `parameters` of the `get` operation on the `/drinks` path.      |
-| `$.paths..parameters[?(@.in=='query')]`                                                    | Selects all query parameters across all paths.                              |
-| `$.paths.*[?(@..parameters.*[?(@.in=='query')])]`                                          | Selects all operations that have one or more query parameters.              |
-| `$.paths.*[?(@..parameters.*[?(@.in=='query')])]['post','get','put','path','delete'].tags` | Selects tags of specific operations that have one or more query parameters. |
-| `$.components.schemas.Drink`                                                               | Selects the `Drink` schema from the `components.schemas` object.            |
+<Table 
+  data={[
+    { jsonpathExpression: "`$.info.title`", description: "Selects the `title` field of the `info` object." },
+    { jsonpathExpression: "`$.servers[0].url`", description: "Selects the `url` field of the first server in the `servers` array." },
+    { jsonpathExpression: "`$.paths['/drinks'].get.parameters`", description: "Selects the `parameters` of the `get` operation on the `/drinks` path." },
+    { jsonpathExpression: "`$.paths..parameters[?(@.in=='query')]`", description: "Selects all query parameters across all paths." },
+    { jsonpathExpression: "`$.paths.*[?(@..parameters.*[?(@.in=='query')])]`", description: "Selects all operations that have one or more query parameters." },
+    { jsonpathExpression: "`$.paths.*[?(@..parameters.*[?(@.in=='query')])]['post','get','put','path','delete'].tags`", description: "Selects tags of specific operations that have one or more query parameters." },
+    { jsonpathExpression: "`$.components.schemas.Drink`", description: "Selects the `Drink` schema from the `components.schemas` object." }
+  ]}
+  columns={[
+    { key: "jsonpathExpression", header: "JSONPath Expression" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 When selecting the object to target for different types of updates, consider the following:
 
-| Type of Update                                       | Target Object         |
-| ---------------------------------------------------- | --------------------- |
-| Updating a primitive value (string, number, boolean) | The containing object |
-| Updating an object                                   | The object itself     |
-| Updating an array                                    | The array itself      |
-| Adding a new property to an object                   | The object itself     |
-| Adding a new item to an array                        | The array itself      |
-| Removing a property from an object                   | The object itself     |
-| Removing an item from an array                       | The array itself      |
+<Table 
+  data={[
+    { updateType: "Updating a primitive value (string, number, boolean)", targetObject: "The containing object" },
+    { updateType: "Updating an object", targetObject: "The object itself" },
+    { updateType: "Updating an array", targetObject: "The array itself" },
+    { updateType: "Adding a new property to an object", targetObject: "The object itself" },
+    { updateType: "Adding a new item to an array", targetObject: "The array itself" },
+    { updateType: "Removing a property from an object", targetObject: "The object itself" },
+    { updateType: "Removing an item from an array", targetObject: "The array itself" }
+  ]}
+  columns={[
+    { key: "updateType", header: "Type of Update" },
+    { key: "targetObject", header: "Target Object" }
+  ]}
+/>
 
 For example, to update the `description` field of the `info` object, you would target the `info` object itself:
 
