--- a/openapi-hub/paths/operations/responses.mdx
+++ b/openapi-hub/paths/operations/responses.mdx
@@ -1,3 +1,5 @@
+import { Table } from "@/mdx/components";
+
 # OpenAPI Responses
 
 The Responses Object is a map of [Response Objects](/openapi/paths/operations/responses#response-object) or [References](/openapi/references) to [Response Objects](/openapi/paths/operations/responses#response-object) that define the possible responses that can be returned from executing the operation.
@@ -59,10 +61,56 @@ Any number of [extension](/openapi/extensions) fields can be added to the respon
 
 The Response Object describes a single response that can be returned from executing an [operation](/openapi/paths/operations).
 
-| Field         |           Type            | Required | Description                                                                                                                                           |
-| ------------- | :-----------------------: | :------: | ----------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `description` |          String           |    ✅    | A description of the response. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description.                      |
-| `headers`     |    [Headers](/openapi/paths/operations/responses/headers)    |          | A map of [Header Objects](/openapi/paths/operations/responses/headers) that defines the headers that can be returned from executing this operation.                                |
-| `content`     |    [Content](/openapi/paths/operations/content)    |          | A map of [Media Type Objects](/openapi/paths/operations/content#media-type-object) that defines the possible media types that can be returned from executing this operation.           |
-| `links`       |      [Links](/openapi/paths/operations/responses/links)      |          | A map of [Link Objects](/openapi/paths/operations/responses/links#link-object) or [References](/openapi/references) that define the possible links that can be returned from executing this operation. |
-| `x-*`         | [Extensions](/openapi/extensions) |          | Any number of extension fields can be added to the response object that can be used by tooling and vendors.                                           |
+<Table
+  title="Response Object Fields"
+  data={[
+    {
+      field: "`description`",
+      type: "String",
+      required: "✅",
+      description: "A description of the response. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description."
+    },
+    {
+      field: "`headers`",
+      type: "[Headers](/openapi/paths/operations/responses/headers)",
+      required: "",
+      description: "A map of [Header Objects](/openapi/paths/operations/responses/headers) that defines the headers that can be returned from executing this operation."
+    },
+    {
+      field: "`content`",
+      type: "[Content](/openapi/paths/operations/content)",
+      required: "",
+      description: "A map of [Media Type Objects](/openapi/paths/operations/content#media-type-object) that defines the possible media types that can be returned from executing this operation."
+    },
+    {
+      field: "`links`",
+      type: "[Links](/openapi/paths/operations/responses/links)",
+      required: "",
+      description: "A map of [Link Objects](/openapi/paths/operations/responses/links#link-object) or [References](/openapi/references) that define the possible links that can be returned from executing this operation."
+    },
+    {
+      field: "`x-*`",
+      type: "[Extensions](/openapi/extensions)",
+      required: "",
+      description: "Any number of extension fields can be added to the response object that can be used by tooling and vendors."
+    }
+  ]}
+  columns={[
+    {
+      key: "field",
+      header: "Field"
+    },
+    {
+      key: "type",
+      header: "Type"
+    },
+    {
+      key: "required",
+      header: "Required"
+    },
+    {
+      key: "description",
+      header: "Description"
+    }
+  ]}
+/>
