--- a/openapi-hub/paths/parameters/cookie-parameters.mdx
+++ b/openapi-hub/paths/parameters/cookie-parameters.mdx
@@ -1,3 +1,5 @@
+import { Table } from "@/mdx/components";
+
 # Cookie Parameters in OpenAPI
 
 Cookie parameters are serialized at runtime to an HTTP cookie header. Types are generally serialized to a string representation, and only `form` style is available.
@@ -14,9 +16,30 @@ Primitive types such as `string`, `number`, `integer`, and `boolean` are seriali
 
 For the example below, we will use a cookie parameter named `drink-limit` with a value of `5`.
 
-| Style  |         Explode == `true`         |   Explode == `false`    |
-| ------ | :-------------------------------: | :---------------------: |
-| `form` | `Cookie: drink-limit=5` (default) | `Cookie: drink-limit=5` |
+<Table
+  title="Primitive Types Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "`Cookie: drink-limit=5` (default)",
+      explodeFalse: "`Cookie: drink-limit=5`"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Arrays As Cookies in OpenAPI
 
@@ -24,9 +47,30 @@ For simple arrays of primitive types such as `string`, `number`, `integer`, and 
 
 For the example below, we will use a cookie parameter named `drink-types` with a value of `["gin", "vodka", "rum"]`.
 
-| Style  |                           Explode == `true`                           |         Explode == `false`          |
-| ------ | :-------------------------------------------------------------------: | :---------------------------------: |
-| `form` | `Cookie: drink-types=gin&drink-types=vodka&drink-types=rum` (default) | `Cookie: drink-types=gin,vodka,rum` |
+<Table
+  title="Simple Arrays Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "`Cookie: drink-types=gin&drink-types=vodka&drink-types=rum` (default)",
+      explodeFalse: "`Cookie: drink-types=gin,vodka,rum`"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Objects As Cookies in OpenAPI
 
@@ -34,9 +78,30 @@ For simple objects whose fields are primitive types such as `string`, `number`, 
 
 For the example below, we will use a cookie parameter named `drink-filter` with a value of `{"type": "cocktail", "strength": 5}`.
 
-| Style  |              Explode == `true`               |               Explode == `false`                |
-| ------ | :------------------------------------------: | :---------------------------------------------: |
-| `form` | `Cookie: type=cocktail&strength=5` (default) | `Cookie: drink-filter=type,cocktail,strength,5` |
+<Table
+  title="Simple Objects Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "`Cookie: type=cocktail&strength=5` (default)",
+      explodeFalse: "`Cookie: drink-filter=type,cocktail,strength,5`"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Complex Objects and Arrays As Cookies in OpenAPI
 
