--- a/docs/customize/authentication/custom-security-schemes.mdx
+++ b/docs/customize/authentication/custom-security-schemes.mdx
@@ -4,7 +4,7 @@ sidebar_label: Customize Security Schemes
 description: "Customize your security and authentication SDK settings for OAuth."
 ---
 
-import { CodeWithTabs, Callout } from "@/mdx/components";
+import { CodeWithTabs, Callout, Table } from "@/mdx/components";
 
 # Custom Security Schemes
 
@@ -17,9 +17,30 @@ Custom Security Schemes define a JSON Schema for SDK security options. Combined 
 
 ### Language support
 
-| TypeScript | Python | Go  | C#  | Java | PHP | Swift | Ruby |
-| ---------- | ------ | --- | --- | ---- | --- | ----- | ---- |
-| ✅         | ✅     | ✅  | 🏗️  | ✅   | 🏗️  | 🏗️    | 🏗️   |
+<Table
+  data={[
+    { 
+      typescript: "✅",
+      python: "✅",
+      go: "✅",
+      csharp: "🏗️",
+      java: "✅",
+      php: "🏗️",
+      swift: "🏗️",
+      ruby: "🏗️"
+    }
+  ]}
+  columns={[
+    { key: "typescript", header: "TypeScript" },
+    { key: "python", header: "Python" },
+    { key: "go", header: "Go" },
+    { key: "csharp", header: "C#" },
+    { key: "java", header: "Java" },
+    { key: "php", header: "PHP" },
+    { key: "swift", header: "Swift" },
+    { key: "ruby", header: "Ruby" }
+  ]}
+/>
 
 ### Define a custom security scheme
 
