--- a/docs/customize/webhooks.mdx
+++ b/docs/customize/webhooks.mdx
@@ -4,10 +4,8 @@ description: "Learn how to generate webhook types in your Speakeasy client SDKs 
 slug: "/customize-sdks/webhooks/"
 ---
 
-import { Callout, Screenshot } from "@/mdx/components";
-
+import { Callout, Screenshot, Table } from "@/mdx/components";
 import webhooksBillingImage from '../assets/webhooks-billing.png';
-
 
 # Add webhooks to your SDKs
 
@@ -213,18 +211,32 @@ const data = await sdk.sendPetCreated(
 
 The `x-speakeasy-webhooks` extension is used to define the webhooks for your API.
 
-| Property      | Type       | Description                                                                                                                                                                                                                                                                                                                       |
-| ------------- | ---------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `security`    | `WebhookSecurity`   | The security configuration for the webhooks.                                                                                                                                                                                                                                                                                     |
+<Table
+  data={[
+    { property: "`security`", type: "`WebhookSecurity`", description: "The security configuration for the webhooks." }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### `x-speakeasy-webhooks.security`
 
-| Property      | Type       | Description                                                                                                                                                                                                                                                                                                                       |
-| ------------- | ---------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `type`        | `string`   | The type of security to use for the webhooks. Valid values are `signature` and `custom`.                                                                                                                                                                                                                                                                                   |
-| `headerName`  | `string`   | The name of the header to use for the security token / signature.                                                                                                                                                                                                                                                                                  |
-| `signatureTextEncoding` | `string`   | The text encoding of the signature. Applicable to `type: signature`.                                                                                                                                                                                                                                                                                        |
-| `algorithm`   | `string`   | The algorithm to use for the signature. Valid values are: `hmac-sha256`. |
+<Table
+  data={[
+    { property: "`type`", type: "`string`", description: "The type of security to use for the webhooks. Valid values are `signature` and `custom`." },
+    { property: "`headerName`", type: "`string`", description: "The name of the header to use for the security token / signature." },
+    { property: "`signatureTextEncoding`", type: "`string`", description: "The text encoding of the signature. Applicable to `type: signature`." },
+    { property: "`algorithm`", type: "`string`", description: "The algorithm to use for the signature. Valid values are: `hmac-sha256`." }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### `x-speakeasy-webhooks.security.type: signature`
 
