--- a/openapi-hub/security/security-schemes/security-openid.mdx
+++ b/openapi-hub/security/security-schemes/security-openid.mdx
@@ -1,15 +1,25 @@
+import { Table } from "@/mdx/components";
+
 # OpenID Connect Security Scheme in OpenAPI
 
 The OpenID Connect security scheme allows for the discovery of configuration values for an OpenID Connect provider. This is generally used for authentication mechanisms based on the OpenID Connect protocol.
 
 The fields for an OpenID Connect security scheme are as follows:
 
-| Field              | Type                              | Required | Description                                                                                                                                                                           |
-| ------------------ | --------------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `type`             | String                            | ✅       | `openIdConnect`                                                                                                                                                                       |
-| `description`      | String                            |          | Human-readable information. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description.                                                         |
-| `openIdConnectUrl` | String                            | ✅       | The URL must point to a JSON OpenID Connect Discovery document.                                                                                                                       |
-| `x-*`              | [Extensions](/openapi/extensions) |          | Any number of extension fields can be added to the security scheme object to be used by tooling and vendors. |
+<Table
+  data={[
+    { field: "`type`", type: "String", required: "✅", description: "`openIdConnect`" },
+    { field: "`description`", type: "String", required: "", description: "Human-readable information. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description." },
+    { field: "`openIdConnectUrl`", type: "String", required: "✅", description: "The URL must point to a JSON OpenID Connect Discovery document." },
+    { field: "`x-*`", type: "[Extensions](/openapi/extensions)", required: "", description: "Any number of extension fields can be added to the security scheme object to be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 The following is an example of an OpenID Connect security scheme:
 
