--- a/openapi-hub/servers.mdx
+++ b/openapi-hub/servers.mdx
@@ -1,3 +1,5 @@
+import { Table } from "@/mdx/components";
+
 # OpenAPI Servers
 
 A list of [Server Objects](/openapi/servers) that either the entire API or a specific path or operation is available on. Servers can be defined at the [Document](/openapi#openapi-document-structure) level, the [Path](/openapi/paths) level, or the [Operation](/openapi/paths/operations) level.
@@ -22,12 +24,20 @@ If a list of servers is provided at the `paths` level, the servers will override
 
 A Server Object describes a single server that is available for the API.
 
-| Field         |                         Type                          | Required | Description                                                                                                                                                                                                                                                                                               |
-| ------------- | :---------------------------------------------------: | :------: | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `url`         |                        String                         |    ✅    | A URL to the server. This can be an absolute URL or a relative URL to the hosted location of the OpenAPI document. The URL also supports variable substitutions via [Templating](/openapi/servers/server-variables).                                                                                      |
-| `description` |                        String                         |          | A description of the server. [CommonMark syntax](https://spec.commonmark.org/) can be used to provide a rich description.                                                                                                                                                                                 |
-| `variables`   | [Server Variables](/openapi/servers/server-variables) |          | A map of variable names to [Server Variable Objects](/openapi/servers/server-variables#server-variable-object) that can be used for variable substitution via [Templating](/openapi/servers/server-variables).                                                                                            |
-| `x-*`         |           [Extensions](/openapi/extensions)           |          | Any number of extension fields can be added to the Server Object ([for example, `x-speakeasy-server-id`](/docs/customize-sdks/servers#managing-multiple-servers-with-ids) that allows IDs to be assigned to each server for easier selection via Speakeasy SDKs) that can be used by tooling and vendors. |
+<Table
+  data={[
+    { field: "`url`", type: "String", required: "✅", description: "A URL to the server. This can be an absolute URL or a relative URL to the hosted location of the OpenAPI document. The URL also supports variable substitutions via [Templating](/openapi/servers/server-variables)." },
+    { field: "`description`", type: "String", required: "", description: "A description of the server. [CommonMark syntax](https://spec.commonmark.org/) can be used to provide a rich description." },
+    { field: "`variables`", type: "[Server Variables](/openapi/servers/server-variables)", required: "", description: "A map of variable names to [Server Variable Objects](/openapi/servers/server-variables#server-variable-object) that can be used for variable substitution via [Templating](/openapi/servers/server-variables)." },
+    { field: "`x-*`", type: "[Extensions](/openapi/extensions)", required: "", description: "Any number of extension fields can be added to the Server Object ([for example, `x-speakeasy-server-id`](/docs/customize-sdks/servers#managing-multiple-servers-with-ids) that allows IDs to be assigned to each server for easier selection via Speakeasy SDKs) that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 If the URL is an absolute path, it **_must_** conform to [RFC 3986](https://datatracker.ietf.org/doc/html/rfc3986) (`schema://host{:port}{/path}`) and not include the query string, and **_must_** be URL encoded (except for the templating delimiters `{}` if not part of the URL).
 
