Update API design

--- a/api-design/consistency.mdx
+++ b/api-design/consistency.mdx
@@ -5,7 +5,7 @@ description: >
 
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout } from "@/components/ui/Callout";
 
 # Enforcing API consistency with a large team
 
@@ -77,10 +77,8 @@ Having all APIs following the same automated style guide, all integrated into
 OpenAPI editors, code editors, and run again in CI/CD pipelines, teams can
 be certain that APIs are going to be consistent, and only get better over time.
 
-<Callout title="Note" type="info">
-  <p>
-    See what linting rules you can create <a href="/docs/prep-openapi/linting">using Speakeasy CLI's lint command</a>.
-  </p>
+<Callout title="NOTE" type="info">
+  See what linting rules you can create <a href="/docs/prep-openapi/linting">using Speakeasy CLI's lint command</a>.
 </Callout>
 
 
