--- a/api-design/errors.mdx
+++ b/api-design/errors.mdx
@@ -2,7 +2,7 @@
 description: "Design useful API errors to save clients time."
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout } from "@/components/ui/Callout";
 
 # Returning informative API Errors
 
@@ -349,8 +349,6 @@ bombarding the API with requests when it's already struggling.
 
 Learn more about [Retry-After on MDN](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Retry-After).
 
-<Callout title="Note" type="info">
-  <p>
-    Help API consumers out by <a href="/docs/runtime/retries">enabling retry logic</a> in Speakeasy SDKs.
-  </p>
+<Callout title="NOTE" type="info">
+  Help API consumers out by <a href="/docs/runtime/retries">enabling retry logic</a> in Speakeasy SDKs.
 </Callout>
