--- a/api-design/picking-architectures.mdx
+++ b/api-design/picking-architectures.mdx
@@ -2,8 +2,6 @@
 description: "We compare popular API architectures to help you choose the right one for your project."
 ---
 
-import { Table } from "@/mdx/components";
-
 # Picking an API architecture
 
 Planning to build an API? Choosing the right API architecture can feel like a gamble. You know that REST is reliable, GraphQL is gaining traction, gRPC is designed for high performance, WebSockets and SSE shine in real time, and SOAP... well, it's a legacy standard, but it's still out there. It's a crowded ecosystem and the stakes are high: Choosing the wrong API architecture can lead to high technical debt, slower development, scalability issues, and, even worse, failure to meet long-term business goals.
@@ -444,24 +442,20 @@ To simplify the decision-making process, we've created a flowchart-style framewo
 
 ![Flowchart outlining the decision-making process for choosing the most suitable API architecture based on project requirements](./assets/api-architecture-decision.png)
 
+
+
+
 ### Decision table
 
-<Table 
-  data={[
-    { scenario: "Building a basic CRUD API", recommendedArchitecture: "REST", why: "Simple, widely supported, and intuitive for basic client-server communication." },
-    { scenario: "Large-scale, real-time collaboration", recommendedArchitecture: "WebSockets", why: "Supports bidirectional, low-latency communication, ideal for applications like Slack." },
-    { scenario: "Real-time updates, unidirectional", recommendedArchitecture: "SSE", why: "Lightweight and easy for server-to-client real-time updates." },
-    { scenario: "Highly flexible data retrieval", recommendedArchitecture: "GraphQL", why: "Allows clients to fetch only the needed data, reducing over- and under-fetching." },
-    { scenario: "Performance-critical microservices", recommendedArchitecture: "gRPC", why: "Binary serialization with Protobuf ensures low latency and high throughput." },
-    { scenario: "Enterprise-grade financial system", recommendedArchitecture: "SOAP", why: "Provides transactional integrity, built-in security, and reliable messaging." },
-    { scenario: "Multi-client application with evolving needs", recommendedArchitecture: "GraphQL", why: "Adaptable to various client needs without requiring API versioning." }
-  ]}
-  columns={[
-    { key: "scenario", header: "Scenario" },
-    { key: "recommendedArchitecture", header: "Recommended architecture" },
-    { key: "why", header: "Why?" }
-  ]}
-/>
+| Scenario                                     | Recommended architecture     | Why?                                                                                      |
+|----------------------------------------------|------------------------------|-------------------------------------------------------------------------------------------|
+| Building a basic CRUD API                    | REST                         | Simple, widely supported, and intuitive for basic client-server communication.            |
+| Large-scale, real-time collaboration         | WebSockets                   | Supports bidirectional, low-latency communication, ideal for applications like Slack.     |
+| Real-time updates, unidirectional            | SSE                          | Lightweight and easy for server-to-client real-time updates.                              |
+| Highly flexible data retrieval               | GraphQL                      | Allows clients to fetch only the needed data, reducing over- and under-fetching.          |
+| Performance-critical microservices           | gRPC                         | Binary serialization with Protobuf ensures low latency and high throughput.               |
+| Enterprise-grade financial system            | SOAP                         | Provides transactional integrity, built-in security, and reliable messaging.              |
+| Multi-client application with evolving needs | GraphQL                      | Adaptable to various client needs without requiring API versioning.                       |
 
 ### How to use the framework
 
