--- a/api-design/request-body.mdx
+++ b/api-design/request-body.mdx
@@ -2,7 +2,7 @@
 description: "Best practices and common patterns for API requests."
 ---
 
-import { CodeWithTabs } from "@/mdx/components";
+import { CodeWithTabs } from "@/components/codehike/CodeTabs";
 
 # Sending request data
 
