--- a/api-design/responses.mdx
+++ b/api-design/responses.mdx
@@ -2,7 +2,7 @@
 description: Creating clear, consistent API responses is crucial for building usable APIs. This guide covers essential patterns and best practices for API responses.
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout } from '@/components/ui/Callout'
 
 # Designing API responses
 
@@ -203,8 +203,8 @@ cumbersome, but there's plenty of generic libraries with various extensions and
 "middlewares" that will help auto-retry any auto-retriable responses,
 automatically cache cachable responses, and so on.
 
-<Callout title="Note" type="info">
-  <p>Avoid confusing your API consumers by <a href="/docs/runtime/retries">enabling retry logic</a> in your Speakeasy SDK.</p>
+<Callout title="NOTE" type="info">
+  Avoid confusing your API consumers by <a href="/docs/runtime/retries">enabling retry logic</a> in your Speakeasy SDK.
 </Callout>
 
 ## Best Practices
