--- a/docs/prep-openapi/linting.mdx
+++ b/docs/prep-openapi/linting.mdx
@@ -4,7 +4,7 @@ description: "Learn how to validate OpenAPI syntax, operations, schemas, and ext
 sidebar_title: "Overview"
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout, Table } from "@/mdx/components";
 
 import Image from "next/image";
 
@@ -146,13 +146,7 @@ After creating custom functions, place them in a directory named `functions` in 
 
 The rules available to the Speakeasy Linter are listed below and can be used in custom rulesets or to match and modify default rules in the `lint.yaml` file.
 
-<<<<<<< HEAD
-import { Table } from "@/components/ui/Table";
-=======
-import { Table } from "@/mdx/components";
->>>>>>> 31ce93d05fbe2d7bdd257ecbdb67c080032812be
-
-<Table 
+<Table
   data={[
     { ruleId: "openapi-tags-alphabetical", defaultSeverity: "info", description: "Tags must be in alphabetical order." },
     { ruleId: "tag-description", defaultSeverity: "warn", description: "Tag must have a description defined." },
@@ -270,7 +264,7 @@ The rulesets available to the Speakeasy Linter are listed below and can be chain
 
 The Speakeasy Linter uses the `speakeasy-recommended` ruleset by default when no custom ruleset is provided. This ruleset is recommended to ensure OpenAPI documents meet the Speakeasy quality bar.
 
-<Table 
+<Table
   data={[
     { ruleId: "duplicate-schema-name" },
     { ruleId: "duplicate-operation-name" },
@@ -320,7 +314,7 @@ The `speakeasy-generation` ruleset is used when generating an SDK from an OpenAP
 
 Use the `speakeasy-generation` ruleset as appropriate to configure the linter to ensure an OpenAPI document is ready for generation.
 
-<Table 
+<Table
   data={[
     { ruleId: "duplicate-schema-name" },
     { ruleId: "duplicate-operation-name" },
@@ -360,7 +354,7 @@ Use the `speakeasy-generation` ruleset as appropriate to configure the linter to
 
 The `speakeasy-openapi` ruleset is a minimal set of rules recommended to ensure OpenAPI documents are generally valid and ready to be used by most of the OpenAPI ecosystem.
 
-<Table 
+<Table
   data={[
     { ruleId: "validate-anyof" },
     { ruleId: "validate-document" },
@@ -402,7 +396,7 @@ The `speakeasy-openapi` ruleset is a minimal set of rules recommended to ensure 
 
 The `vacuum` ruleset is provided by the [vacuum project](https://github.com/daveshanley/vacuum), which the Speakeasy Linter is built on top of. This set of rules is recommended to ensure OpenAPI documents meet the vacuum quality bar.
 
-<Table 
+<Table
   data={[
     { ruleId: "operation-success-response" },
     { ruleId: "operation-operationId-unique" },
@@ -469,7 +463,7 @@ The `vacuum` ruleset is provided by the [vacuum project](https://github.com/dave
 
 The `owasp` ruleset is recommended to ensure OpenAPI documents meet the [Open Worldwide Application Security Project (OWASP)](https://owasp.org/www-project-api-security/) quality bar.
 
-<Table 
+<Table
   data={[
     { ruleId: "owasp-protection-global-unsafe" },
     { ruleId: "owasp-protection-global-unsafe-strict" },
