--- a/docs/customize/authentication/overview.mdx
+++ b/docs/customize/authentication/overview.mdx
@@ -3,9 +3,7 @@ slug: "/authenticate-sdks"
 sidebar_label: Customize Authentication
 description: "Customize your security and authentication SDK settings for OAuth."
 ---
-
-
-
+import { Table } from "@/mdx/components";
 
 # Security and authentication
 
@@ -15,37 +13,33 @@ Speakeasy-created SDKs have authentication automatically configured based on the
 
 APIs authenticated with simple schemes, such as Basic HTTP auth, API keys, and bearer tokens, work out of the box. For APIs using short-lived tokens (OAuth), additional configuration is required to simplify setup.
 
-<<<<<<< HEAD
-import { Table } from "@/components/ui/Table";
-=======
 import { Table } from "@/mdx/components";
->>>>>>> 31ce93d05fbe2d7bdd257ecbdb67c080032812be
 
-<Table 
+<Table
   data={[
-    { 
-      mechanism: "HTTP Basic authentication", 
-      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#basic-http-authentication)" 
+    {
+      mechanism: "HTTP Basic authentication",
+      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#basic-http-authentication)"
     },
-    { 
-      mechanism: "API key [header, query]", 
-      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#api-key-authentication)" 
+    {
+      mechanism: "API key [header, query]",
+      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#api-key-authentication)"
     },
-    { 
-      mechanism: "Bearer Token authentication", 
-      support: "✅  [Docs](/docs/customize/authentication/configuration)" 
+    {
+      mechanism: "Bearer Token authentication",
+      support: "✅  [Docs](/docs/customize/authentication/configuration)"
     },
-    { 
-      mechanism: "OAuth", 
-      support: "✅  [All GA and some beta languages](/docs/customize/authentication/oauth)" 
+    {
+      mechanism: "OAuth",
+      support: "✅  [All GA and some beta languages](/docs/customize/authentication/oauth)"
     },
-    { 
-      mechanism: "mTLS", 
-      support: "✅  [Using hooks](/docs/customize/code/sdk-hooks)" 
+    {
+      mechanism: "mTLS",
+      support: "✅  [Using hooks](/docs/customize/code/sdk-hooks)"
     },
-    { 
-      mechanism: "Custom security schemes", 
-      support: "✅  [Using Speakeasy custom security schemes extension](/docs/customize/authentication/custom-security-schemes)" 
+    {
+      mechanism: "Custom security schemes",
+      support: "✅  [Using Speakeasy custom security schemes extension](/docs/customize/authentication/custom-security-schemes)"
     }
   ]}
   columns={[
