chore: update mdx imports * chore: update callout casing

--- a/api-design/api-compliance.mdx
+++ b/api-design/api-compliance.mdx
@@ -2,9 +2,9 @@
 description: "Bridging the gap between legal requirements and technical implementation with proven industry practices."
 ---
 
-# API compliance: Practical approaches for modern development teams
+import { Callout } from "@/mdx/components";
 
-import { Callout } from "@/components/ui/Callout";
+# API compliance: Practical approaches for modern development teams
 
 There's nothing quite like hitting your stride with a large API project. Your rate limiting, authentication, and state management have been debated, designed, built, and tested to perfection. It's time to start building new features for your growing user base. Bliss.
 
