--- a/api-design/caching.mdx
+++ b/api-design/caching.mdx
@@ -2,9 +2,9 @@
 description: Learn how to use HTTP caching to make APIs more efficient and sustainable.
 ---
 
-# Caching API Responses
+import { Callout } from "@/mdx/components";
 
-import { Callout } from "@/components/ui/Callout";
+# Caching API Responses
 
 API caching can save servers some serious work, cut down on costs, and even help reduce the carbon impact of an API. However, it is often considered an optimization rather than what it truly is: an integral part of API design. 
 
@@ -154,7 +154,7 @@ Using `Cache-Control` headers its possible to specify whether the response can b
 - `private` — The response can only be cached by the client.
 - `no-store` — The response can't be cached at all.
 
-<Callout title="NOTE" type="info">
+<Callout title="Note" type="info">
   When a response contains an `Authorization` header, it's automatically marked as `private` to prevent sensitive data from being cached by shared caches. This is another reason to use standard auth headers instead of using custom headers like `X-API-Key`.
 </Callout>
 
