--- a/api-design/responses.mdx
+++ b/api-design/responses.mdx
@@ -203,7 +203,7 @@ cumbersome, but there's plenty of generic libraries with various extensions and
 "middlewares" that will help auto-retry any auto-retriable responses,
 automatically cache cachable responses, and so on.
 
-<Callout title="NOTE" type="info">
+<Callout title="Note" type="info">
   Avoid confusing your API consumers by <a href="/docs/runtime/retries">enabling retry logic</a> in your Speakeasy SDK.
 </Callout>
 
