chore: update mdx imports

--- a/api-design/responses.mdx
+++ b/api-design/responses.mdx
@@ -2,7 +2,7 @@
 description: Creating clear, consistent API responses is crucial for building usable APIs. This guide covers essential patterns and best practices for API responses.
 ---
 
-import { Callout } from '@/components/ui/Callout'
+import { Callout } from '@/mdx/components';
 
 # Designing API responses
 
