--- a/openapi/overlays.mdx
+++ b/openapi/overlays.mdx
@@ -1,5 +1,4 @@
-import { Callout, Spotlight } from "@/mdx/components";
-import { Table } from "@/components/ui/Table";
+import { Callout, Spotlight, Table } from "@/mdx/components";
 
 # OpenAPI Overlays
 
