API design update (#10)
Co-authored-by: Chai Landau <chai.landau@gmail.com>

--- a/api-design/pagination.mdx
+++ b/api-design/pagination.mdx
@@ -2,7 +2,7 @@
 description: "API Pagination is a common pattern for managing large data sets in APIs. This guide covers the basics of API pagination and best practices."
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout } from '@/mdx/components';
 
 # Paginating API responses
 
@@ -336,5 +336,5 @@ Adding or drastically changing pagination later could be a whole mess of
 backwards compatibility breaks.
 
 <Callout title="Note" type="info">
-  <p>Pagination can be tricky to work with for API clients, but Speakeasy SDKs can help out. Learn about <a href="/docs/runtime/pagination">adding pagination</a> to your Speakeasy SDK.</p>
+  Pagination can be tricky to work with for API clients, but Speakeasy SDKs can help out. Learn about <a href="/docs/runtime/pagination">adding pagination</a> to your Speakeasy SDK.
 </Callout>
