chore: fix svg import

--- a/api-design/testing.mdx
+++ b/api-design/testing.mdx
@@ -16,7 +16,7 @@ But for *public* or third-party-consumed APIs, the *why* extends further. Your t
 
 API testing clashes with the traditional test pyramid - you know, the one that says, "Many unit tests at the bottom, fewer integration tests in the middle, and a few end-to-end tests at the top."
 
-![The test pyramid](./assets/api-testing/pyramid.svg)
+![The test pyramid](./assets/api-testing/pyramid.svg?.url)
 
 This pyramid is a good model for verifying the implementation details of small units of work, but it's a terrible model for verifying an API's behavior. Unit tests, useful on the server when testing complex logic, don't tell us much about how the API behaves as a whole.
 
@@ -26,7 +26,7 @@ We need a new model for API tests.
 
 The traditional test pyramid (many unit tests, fewer integration tests, fewest E2E tests) is okay for internal implementation details. But for verifying API *behavior* from a consumer's viewpoint, the emphasis shifts.
 
-![API test pyramid](./assets/api-testing/api-pyramid.svg)
+![API test pyramid](./assets/api-testing/api-pyramid.svg?.url)
 
 It's not exactly a pyramid, but you get the idea.
 
