chore: add optional chaining

--- a/api-design/index.mdx
+++ b/api-design/index.mdx
@@ -14,16 +14,16 @@ Welcome to our comprehensive API design guide. This collection of resources help
 
 Start with these foundational concepts to build a solid API.
 
-<CardGrid cards={apiDesignSections[0].cards} />
+<CardGrid cards={apiDesignSections?.[0]?.cards} />
 
 ## Advanced Considerations
 
 Once you've mastered the basics, these topics will help you build more sophisticated APIs.
 
-<CardGrid cards={apiDesignSections[1].cards} />
+<CardGrid cards={apiDesignSections?.[1]?.cards} />
 
 ## Productizing APIs
 
 Turn your API into a polished product with these guides on documentation, security, and more.
 
-<CardGrid cards={apiDesignSections[2].cards} />
+<CardGrid cards={apiDesignSections?.[2]?.cards} />
