--- a/openapi/frameworks.mdx
+++ b/openapi/frameworks.mdx
@@ -1,4 +1,5 @@
 ---
+asIndexPage: true
 description: "How to generate an OpenAPI schema from your code"
 ---
 
@@ -481,4 +482,3 @@ While there are a few tools listed above that do more than generate a schema fro
 
 - https://tools.openapis.org/categories/all.html
 - https://openapi.tools
-
