--- a/openapi/paths/operations.mdx
+++ b/openapi/paths/operations.mdx
@@ -1,6 +1,10 @@
+---
+asIndexPage: true
+title: Operations
+---
 import { Table } from "@/mdx/components";
 
-# The OpenAPI Operation Object
+# The Operation Object in OpenAPI
 
 An operation object describes a single API operation within a path, including all its possible inputs and outputs and the configuration required to make a successful request.
 
