--- a/openapi/paths/operations/content.mdx
+++ b/openapi/paths/operations/content.mdx
@@ -1,4 +1,6 @@
-
+---
+title: Content and Media Types
+---
 import { Callout, Table } from "@/mdx/components";
 
 # Content and Media Types in OpenAPI
