--- a/openapi/paths/operations/responses.mdx
+++ b/openapi/paths/operations/responses.mdx
@@ -1,6 +1,10 @@
+---
+title: Responses
+asIndexPage: true
+---
 import { Table } from "@/mdx/components";
 
-# OpenAPI Responses
+# OpenAPI Response Objects
 
 The Responses Object is a map of [Response Objects](/openapi/paths/operations/responses#response-object) or [References](/openapi/references) to [Response Objects](/openapi/paths/operations/responses#response-object) that define the possible responses that can be returned from executing the operation.
 
