--- a/openapi/schemas/numbers.mdx
+++ b/openapi/schemas/numbers.mdx
@@ -1,4 +1,8 @@
-# numbers and integers
+---
+title: Numbers and Integers
+description: Best practices for describing numbers and integers in OpenAPI
+---
+# numbers and integers in OpenAPI
 
 The **number/integer** types allows the describing of various number formats through a combination of the **type** and **format** attribute, along with a number of attributes for validating the data, the spec should cover most use cases.
 
