--- a/openapi/schemas/objects/polymorphism.mdx
+++ b/openapi/schemas/objects/polymorphism.mdx
@@ -1,6 +1,10 @@
+---
+title: oneOf, allOf, anyOf
+description: describing Polymorphism (composition and inheritance) in OpenAPI with oneOf, allOf, and anyOf
+---
 import { Table } from "@/mdx/components";
 
-# Composition and Inheritance in OpenAPI
+# oneOf, allOf, anyOf: composition and inheritance in OpenAPI
 
 OpenAPI allows us to combine object schemas using the keywords `allOf`, `anyOf`, and `oneOf`.
 
