--- a/openapi/tags.mdx
+++ b/openapi/tags.mdx
@@ -1,6 +1,6 @@
 import { Table } from "@/mdx/components";
 
-# OpenAPI Tags
+# Tags in OpenAPI
 
 The document-level `tags` field contains a list of [tag](/openapi/tags#tag-object) definitions that may be used to categorize or group operations in the API. Tags can be referenced by [operations](/openapi/paths/operations) via the operations-level `tags` field.
 
