--- a/openapi/schemas.mdx
+++ b/openapi/schemas.mdx
@@ -1,8 +1,20 @@
+---
+title: Data Types
+asIndexPage: true
+---
 import { Table } from "@/mdx/components";
 
-# Schema Object in OpenAPI
+# Data Types in OpenAPI
 
-The Schema Object represents any data type used as input or output in OpenAPI. Data types can be objects, arrays, or primitives such as `string`, `number`, `integer`, and `boolean`.
+The Schema Object represents any data type used as input or output in OpenAPI. The standard supports the following data types:
+
+- [Strings](/openapi/schemas/strings) - A sequence of characters. (dates, times, passwords, byte, and binary data are considered strings)
+- [Numbers](/openapi/schemas/numbers) - A number, either integer or floating-point.
+- [Booleans](/openapi/schemas/booleans) - A true or false value.
+- [Arrays](/openapi/schemas/arrays) - A collection of other data types.
+- [Objects](/openapi/schemas/objects) - A collection of key-value pairs.
+- [Enums](/openapi/schemas/enums) - A fixed list of possible values.
+- [Null](/openapi/schemas/null) - A null value.
 
 Schema objects are sometimes referred to as _models_, _data types_, or simply, _schemas_. This is because schema types are used to model complex data types used by an API.
 
